--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <button class="todo-btn" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
+        <div class="select">
+            <select name="todos">
+                <option value="All">All</option>
+                <option value="Completed">Completed</option>
+                <option value="Uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
     <div class="todo-container">
         <ul class="todo-list">
