add error window, style it, add function closeErrorWindow

--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@
                 <option value="uncompleted">Uncompleted</option>
             </select>
         </div>
+        <div class="error-container">
+            <div class="error-text">Вы забыли написать текст</div>
+            <div class="btn-error-wrapper">
+                <button class="error-btn">Ок</button>
+            </div>
+        </div>
     </form>
     <div class="todo-container">
         <ul class="todo-list"></ul>
     </div>
+
+    
 
     <script src="main.js"></script>
 </body>
